--- a/Index.html
+++ b/Index.html
@@ -110,7 +110,7 @@
 			<div class="row" id="formePadding">
 				<div class="col-xs-12">
 					<div class="jumbotron">
-						<h1>Posaljite nam Vas utisak:</h1>
+						<h1>Posaljite nam Vasu porudzbinu:</h1>
 						<div class="row">
 							<div class="col-xs-6">
 								<form action="" method="">
@@ -123,8 +123,8 @@
 										<input type="text" class="form-control" id="prezime"/>
 									</div>
 									<div class="form-group">
-										<label for="email">Email</label>
-										<input type="email" class="form-control" id="email"/>
+										<label for="email">Broj telefona</label>
+										<input type="text" class="form-control" id="brTel"/>
 									</div>
 								</form>
 							</div>
