--- a/PicerijaSajt/Index.html
+++ b/PicerijaSajt/Index.html
@@ -145,16 +145,12 @@
 		</div>
 	</div>
 			
-
-
-	
-
-
 <!--
 <script src="/js/jquery.min.js" ></script>
 <script src="/js/bootstrap.min.js"></script>
 -->
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	 <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(97730)</script> 
 </body>
 </html>
