--- a/PicerijaSajt/Index.html
+++ b/PicerijaSajt/Index.html
@@ -21,7 +21,7 @@
 		<div class="navbar-collapse collapse" id="mainNavbar">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="index.html">Pocetna</a></li>
-				<li><a href="meni/index.html">Meni</a></li>
+				<li><a href="Meni/index.html">Meni</a></li>
 				<li><a href="O Nama/index.html">O Nama</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
