--- a/PicerijaSajt/O Nama/index.html
+++ b/PicerijaSajt/O Nama/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Picerija Pera Ždera</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles/ONama.css">
+	<link rel="stylesheet" href="Styles/ONama.css">
 <head>
 <body>
 <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
