--- a/PicerijaSajt/Index.html
+++ b/PicerijaSajt/Index.html
@@ -1,6 +1,7 @@
 <!DOCKTYPE html>
 <html>
  <title>Picerija Zdera</title>
+ <meta name="keywords" content="Picerija, pizza, furuna">
 <head>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="pocetnaCss.css">
@@ -8,6 +9,7 @@
 <body>
 	<nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
 		<a class="navbar-brand" href="index.html"><img src="images/pizzaLogo.png"/></a>
+        <link rel="icon" href="images/pica.jpg" type="image/png" sizes="16x16">
 		<span class="navbar-text float-xs-right text-muted" id="navbarText">
 		<p id="navText">Pera Zdera</p>
 		</span>
@@ -21,7 +23,7 @@
 		<div class="navbar-collapse collapse" id="mainNavbar">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="index.html">Pocetna</a></li>
-				<li><a href="Meni/index.html">Meni</a></li>
+				<li><a href="meni/index.html">Meni</a></li>
 				<li><a href="O Nama/index.html">O Nama</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
@@ -123,8 +125,8 @@
 										<input type="text" class="form-control" id="prezime"/>
 									</div>
 									<div class="form-group">
-										<label for="text">Broj telefona</label>
-										<input type="text" class="form-control" id="BrTel"/>
+										<label for="email">Broj telefona</label>
+										<input type="text" class="form-control" id="Broj telefona"/>
 									</div>
 								</form>
 							</div>
@@ -144,13 +146,18 @@
 			<hr size="12px" color="red">
 		</div>
 	</div>
-			
+		
+
 <!--
 <script src="/js/jquery.min.js" ></script>
 <script src="/js/bootstrap.min.js"></script>
 -->
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(97730)</script> 
+
+ <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(97730)</script> 
+
+
+
 </body>
 </html>
