--- a/PicerijaSajt/O Nama/index.html
+++ b/PicerijaSajt/O Nama/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Picerija Pera Ždera</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles/ONama.css">
+	<link rel="stylesheet" href="Styles/ONama.css">
 <head>
 <body>
 <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
@@ -20,7 +20,7 @@
 		</div>
 		<div class="navbar-collapse collapse" id="mainNavbar">
 			<ul class="nav navbar-nav">
-				<li><a href="../index.html">Pocetna</a></li>
+				<li><a href="../Index.html">Pocetna</a></li>
 				<li><a href="../Meni/index.html">Meni</a></li>
 				<li class="active"><a href="index.html">O Nama</a></li>
 			</ul>
