--- a/PicerijaSajt/Kontakt/index.html
+++ b/PicerijaSajt/Kontakt/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="navbar-collapse collapse" id="mainNavbar">
 			<ul class="nav navbar-nav">
-				<li><a href="../index.html">Pocetna</a></li>
+				<li><a href="../Index.html">Pocetna</a></li>
 				<li><a href="../Meni/index.html">Meni</a></li>
 				<li><a href="../O Nama/index.html">O Nama</a></li>
 			</ul>
