--- a/PicerijaSajt/Meni/index.html
+++ b/PicerijaSajt/Meni/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="styles/meniCss.css">
 </head>
 <body>
+	 <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(97730)</script> 
 <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
 		<a class="navbar-brand" href="../index.html"><img src="images/pizzaLogo.png"/></a>
 		<span class="navbar-text float-xs-right text-muted" id="navbarText">
