--- a/PicerijaSajt/Kontakt/index.html
+++ b/PicerijaSajt/Kontakt/index.html
@@ -69,7 +69,7 @@
 	<hr size="12px" color="red">
 </div>
 
-
+ <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(97730)</script> 
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <body>
